--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.mycila</groupId>
     <artifactId>mycila-jmx</artifactId>
-    <version>1.0.rc1-SNAPSHOT</version>
+    <version>1.0.rc1</version>
     <packaging>jar</packaging>
 
     <name>mycila-jmx</name>
@@ -22,7 +22,7 @@
         <connection>scm:git:git@github.com:mycila/jmx.git</connection>
         <developerConnection>scm:git:git@github.com:mycila/jmx.git</developerConnection>
         <url>http://github.com/mycila/jmx</url>
-        <tag>HEAD</tag>
+        <tag>mycila-jmx-1.0.rc1</tag>
     </scm>
 
     <properties>
