--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>com.mycila</groupId>
     <artifactId>mycila-jmx</artifactId>
-    <version>1.1.ga-SNAPSHOT</version>
+    <version>1.1.ga</version>
     <packaging>jar</packaging>
 
     <name>mycila-jmx</name>
@@ -43,7 +43,7 @@
         <connection>scm:git:https://github.com/mycila/${mycila.github.name}.git</connection>
         <developerConnection>scm:git:git@github.com:mycila/${mycila.github.name}.git</developerConnection>
         <url>http://github.com/mycila/${mycila.github.name}</url>
-        <tag>HEAD</tag>
+        <tag>mycila-jmx-1.1.ga</tag>
     </scm>
 
     <build>
